--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,14 +11,6 @@ p{
     font-size: 18px;
 }
 
-.nav-link{
-    margin: 40px 60px;
-    font-size: 20px;
-}
-.navbar-brand{
-    margin: 0 40px;
-}
-
 .home_KeyVision{
     background-color: bisque;
     height: 520px;
@@ -29,7 +21,7 @@ p{
     height: 520px;
 }
 .home_intro p{
-    margin: 80px 200px;
+    margin: 80px 10%;
     border: 2px solid black;
     text-align: center;
 }
@@ -37,10 +29,11 @@ p{
     font-size: 20px;
 } */
 .home_works{
-    background-color: rgb(0, 140, 255);
+    /* background-color: rgb(0, 140, 255); */
 }
 .home_work{
+    width: 25%;
     height: 300px;
-    background-color: rgb(124, 196, 255);
+    /* background-color: rgb(124, 196, 255); */
     border: 2px solid black;
 }
