--- a/views/exhibition.ejs
+++ b/views/exhibition.ejs
@@ -17,10 +17,90 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/exhibition.css">
+    <!-- 每個連結通用 -->
+    <link rel="stylesheet" href="../css/nav.css">
 </head>
 
 <body>
     展場資訊
+
+    <!-- navbar -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="" alt="" srcset="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="exhibition">展覽資訊</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            展覽作品
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="portfolio/gaming">遊戲</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="portfolio/interaction">互動</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="portfolio/film">動畫影視</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="portfolio/marketing">行銷</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news">公告</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about">關於我們</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- footer -->
+
+    <hr>
+
+    <div class="container">
+        <div class="row footer">
+            <div class="col">
+                <p>
+                    指導單位：<br>元智大學資訊學院
+                <p>
+            </div>
+            <div class="col">
+                <p>
+                    主辦單位：<br>元智大學資訊傳播學系
+                <p>
+                
+            </div>
+            <div class="col">
+                <p>
+                    執行單位：<br>
+                    元智大學資訊傳播學系<br>
+                    第二十六屆畢業展覽籌備會
+                </p>
+                
+            </div>
+            
+        </div>
+    </div>
 </body>
 <script src="../js/exhibition.js"></script>
 
