--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -17,6 +17,8 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/portfolio.css">
+    <!-- 每個連結通用 -->
+    <link rel="stylesheet" href="../css/nav.css">
 </head>
 
 <body>
