--- a/views/home.ejs
+++ b/views/home.ejs
@@ -70,7 +70,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col home_KeyVision">
+            <div class="col banner">
                 Key Vision
             </div>
         </div>
