--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,8 +22,6 @@
 </head>
 
 <body>
-    關於我們
-
     <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -72,6 +70,20 @@
             </div>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col banner">
+                畢籌會大合照
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>獵人名單</h1>
+            </div>
+        </div>
+
+    </div>
 
     <!-- footer -->
 
