--- a/views/about.ejs
+++ b/views/about.ejs
@@ -72,16 +72,175 @@
     </nav>
 
     <div class="container">
+
         <div class="row">
             <div class="col banner">
                 畢籌會大合照
             </div>
         </div>
+
+        <!-- 獵人名單 -->
+
         <div class="row">
             <div class="col">
                 <h1>獵人名單</h1>
             </div>
         </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">姓名</h5>
+                    <p class="card-text">
+                        內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹
+                    </p>
+                    <h5 class="card-title">經歷</h5>
+                    <p class="card-text">
+                        <ul>
+                            <li>經歷介紹</li>
+                            <li>經歷介紹</li>
+                            <li>經歷介紹</li>
+                        </ul>
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">姓名</h5>
+                    <p class="card-text">
+                        內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹
+                    </p>
+                    <h5 class="card-title">經歷</h5>
+                    <p class="card-text">
+                        <ul>
+                            <li>經歷介紹</li>
+                            <li>經歷介紹</li>
+                            <li>經歷介紹</li>
+                        </ul>
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">姓名</h5>
+                    <p class="card-text">
+                        內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹內文介紹
+                    </p>
+                    <h5 class="card-title">經歷</h5>
+                    <p class="card-text">
+                        <ul>
+                            <li>經歷介紹</li>
+                            <li>經歷介紹</li>
+                            <li>經歷介紹</li>
+                        </ul>
+                    </p>
+                  </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 贊助夥伴 -->
+
+        <div class="row">
+            <div class="col">
+                <h1>贊助夥伴</h1>
+            </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-6 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">廠商名稱</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">廠商名稱</h5>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">廠商名稱</h5>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">廠商名稱</h5>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">廠商名稱</h5>
+                  </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">廠商名稱</h5>
+                  </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 贊助夥伴 -->
+
+        <div class="row">
+            <div class="col">
+                <h1>聯絡我們</h1>
+            </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">IG</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">FB</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">YT</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
