--- a/views/about.ejs
+++ b/views/about.ejs
@@ -90,7 +90,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card">
-                <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <img src="media/predictor.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">姓名</h5>
                     <p class="card-text">
@@ -109,7 +109,7 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="media/predictor.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">姓名</h5>
                     <p class="card-text">
@@ -128,7 +128,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">姓名</h5>
                     <p class="card-text">
@@ -206,7 +206,7 @@
             </div>
         </div>
 
-        <!-- 贊助夥伴 -->
+        <!-- 聯絡我們 -->
 
         <div class="row">
             <div class="col">
@@ -217,7 +217,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                    <img src="" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">IG</h5>
                     </div>
