--- a/views/about.ejs
+++ b/views/about.ejs
@@ -157,48 +157,48 @@
 
         <div class="row row-cols-1 row-cols-md-6 g-4">
             <div class="col">
-              <div class="card">
-                <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+              <div class="card text-center">
+                <img src="media/predictor.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">廠商名稱</h5>
                 </div>
               </div>
             </div>
             <div class="col">
-                <div class="card">
-                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card text-center">
+                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">廠商名稱</h5>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card text-center">
+                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">廠商名稱</h5>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card text-center">
+                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">廠商名稱</h5>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card text-center">
+                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">廠商名稱</h5>
                   </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                  <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card text-center">
+                  <img src="media/predictor.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                       <h5 class="card-title">廠商名稱</h5>
                   </div>
@@ -214,28 +214,20 @@
             </div>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-sm-2 g-4">
             <div class="col">
-                <div class="card">
-                    <img src="" class="card-img-top" alt="...">
+                <div class="card contact text-center">
+                    <img src="media/instagram.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">IG</h5>
+                       <h5 class="card-title">IG名稱</h5>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                    <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
+                <div class="card contact text-center">
+                    <img src="media/facebook.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                       <h5 class="card-title">FB</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="../public/media/test/predictor.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                       <h5 class="card-title">YT</h5>
+                       <h5 class="card-title">FB名稱</h5>
                     </div>
                 </div>
             </div>
