--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,8 +58,18 @@
                             <li><a class="dropdown-item" href="portfolio/marketing">行銷</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="news">公告</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            公告
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="news">一般消息</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="activity">活動快訊</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about">關於我們</a>
@@ -94,14 +104,52 @@
                 <h1>展覽作品</h1>
             </div>
         </div>
-        <div class="row home_works">
+
+        <div class="row row-cols-1 row-cols-sm-4 g-4">
+            <div class="col">
+                <div class="card text-center">
+                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">遊戲</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card text-center">
+                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">互動</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card text-center">
+                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">影視動畫</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card text-center">
+                    <img src="media/predictor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">行銷</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- <div class="row home_works">
             <div class="col home_work">
-                <img src="../public/media/test/predictor.jpg" alt="">
+                <img src="media/predictor.jpg" alt="">
             </div>
             <div class="col home_work"></div>
             <div class="col home_work"></div>
             <div class="col home_work"></div>
-        </div>
+        </div> -->
+
 
     </div>
     
