--- a/views/news.ejs
+++ b/views/news.ejs
@@ -62,8 +62,18 @@
                             <li><a class="dropdown-item" href="portfolio/marketing">行銷</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="news">公告</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            公告
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="news">一般消息</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="activity">活動快訊</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about">關於我們</a>
@@ -72,6 +82,26 @@
             </div>
         </div>
     </nav>
+
+    <!--  -->
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                標題
+            </div>
+            <div class="card-body">
+              <!-- <h5 class="card-title">Special title treatment</h5> -->
+              <p class="card-text">
+                簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+              </p>
+              <a href="#" class="btn btn-primary">了解詳情</a>
+            </div>
+            <div class="card-footer text-muted">
+                2023-02-30
+            </div>
+        </div>
+    </div>
+    
 
     <!-- footer -->
 
