--- a/views/activity.ejs
+++ b/views/activity.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>影視動畫</title>
+    <title>最新消息</title>
     <!-- bootstrap必要引入文件 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -16,16 +16,16 @@
     <!-- jquery必要引入文件（可用可不用） -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/activity.css">
     <!-- 每個連結通用 -->
     <link rel="stylesheet" href="../css/nav.css">
 </head>
 
 <body>
-    影視動畫
+    最新消息
 
     <!-- navbar -->
-
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../exhibition">展覽資訊</a>
+                        <a class="nav-link" aria-current="page" href="exhibition">展覽資訊</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -47,19 +47,19 @@
                             展覽作品
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="gaming">遊戲</a></li>
+                            <li><a class="dropdown-item" href="portfolio/gaming">遊戲</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="interaction">互動</a></li>
+                            <li><a class="dropdown-item" href="portfolio/interaction">互動</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="film">動畫影視</a></li>
+                            <li><a class="dropdown-item" href="portfolio/film">動畫影視</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="marketing">行銷</a></li>
+                            <li><a class="dropdown-item" href="portfolio/marketing">行銷</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -68,15 +68,15 @@
                             公告
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../news">一般消息</a></li>
+                            <li><a class="dropdown-item" href="news">一般消息</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="../activity">活動快訊</a></li>
+                            <li><a class="dropdown-item" href="activity">活動快訊</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../about">關於我們</a>
+                        <a class="nav-link" href="about">關於我們</a>
                     </li>
                 </ul>
             </div>
@@ -112,6 +112,6 @@
         </div>
     </div>
 </body>
-<script src="../js/about.js"></script>
+<script src="../js/news.js"></script>
 
 </html>
