--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,7 +1,7 @@
 /*--------- 大標題 ----------*/
 
 h1{
-    margin: 80px 0;
+    /* margin: 80px 0; */
     /* border: 2px solid black; */
     text-align: center;
 }
