--- a/views/activity.ejs
+++ b/views/activity.ejs
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    最新消息
+    活動快訊
 
     <!-- navbar -->
     
@@ -82,6 +82,14 @@
             </div>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col banner">
+                Key Vision
+            </div>
+        </div>
+    </div>
 
     <!-- footer -->
 
