--- a/views/news.ejs
+++ b/views/news.ejs
@@ -22,18 +22,16 @@
 </head>
 
 <body>
-    最新消息
-
     <!-- navbar -->
-    
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="" alt="" srcset="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -90,18 +88,126 @@
                 標題
             </div>
             <div class="card-body">
-              <!-- <h5 class="card-title">Special title treatment</h5> -->
-              <p class="card-text">
-                簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
-              </p>
-              <a href="#" class="btn btn-primary">了解詳情</a>
+                <!-- <h5 class="card-title">Special title treatment</h5> -->
+                <p class="card-text">
+                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                </p>
+                <!-- <p class="placeholder-wave">
+                <span class="placeholder col-12"></span>
+                <span class="placeholder col-12"></span>
+              </p> -->
+
+                <!-- Button 了解詳情 -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
+                    了解詳情
+                </button>
             </div>
             <div class="card-footer text-muted">
                 2023-02-30
             </div>
         </div>
+
+        <div class="card">
+            <div class="card-header">
+                標題
+            </div>
+            <div class="card-body">
+                <!-- <h5 class="card-title">Special title treatment</h5> -->
+                <p class="card-text">
+                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                </p>
+                <!-- <p class="placeholder-wave">
+                <span class="placeholder col-12"></span>
+                <span class="placeholder col-12"></span>
+              </p> -->
+
+                <!-- Button 了解詳情 -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
+                    了解詳情
+                </button>
+            </div>
+            <div class="card-footer text-muted">
+                2023-02-30
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                標題
+            </div>
+            <div class="card-body">
+                <!-- <h5 class="card-title">Special title treatment</h5> -->
+                <p class="card-text">
+                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                </p>
+                <!-- <p class="placeholder-wave">
+                <span class="placeholder col-12"></span>
+                <span class="placeholder col-12"></span>
+              </p> -->
+
+                <!-- Button 了解詳情 -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
+                    了解詳情
+                </button>
+            </div>
+            <div class="card-footer text-muted">
+                2023-02-30
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                標題
+            </div>
+            <div class="card-body">
+                <!-- <h5 class="card-title">Special title treatment</h5> -->
+                <p class="card-text">
+                    簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文簡述內文
+                </p>
+                <!-- <p class="placeholder-wave">
+                <span class="placeholder col-12"></span>
+                <span class="placeholder col-12"></span>
+              </p> -->
+
+                <!-- Button 了解詳情 -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#news_content">
+                    了解詳情
+                </button>
+            </div>
+            <div class="card-footer text-muted">
+                2023-02-30
+            </div>
+        </div>
+
+        <!-- 一般消息內文 -->
+        <div class="modal fade" id="news_content" tabindex="-1" aria-labelledby="news_contentLabel" aria-hidden="true">
+            <div class="modal-dialog modal-fullscreen">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="news_contentLabel">一般消息標題</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            <br>
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                            詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文詳細內文
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        2023-02-30
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
-    
+
 
     <!-- footer -->
 
@@ -118,7 +224,7 @@
                 <p>
                     主辦單位：<br>元智大學資訊傳播學系
                 <p>
-                
+
             </div>
             <div class="col">
                 <p>
@@ -126,9 +232,9 @@
                     元智大學資訊傳播學系<br>
                     第二十六屆畢業展覽籌備會
                 </p>
-                
+
             </div>
-            
+
         </div>
     </div>
 </body>
