--- a/views/portfolio/film.ejs
+++ b/views/portfolio/film.ejs
@@ -22,8 +22,6 @@
 </head>
 
 <body>
-    影視動畫
-
     <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -82,6 +80,27 @@
             </div>
         </div>
     </nav>
+
+    <!-- film -->
+    <div class="container">
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <img src="../media/predictor.jpg" alt="...">
+                </div>
+                <div class="col">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 
     <!-- footer -->
 
